config for 0.04 dev version

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -3,7 +3,7 @@ Scatterer_config
 	autosavePlanetSettingsOnSceneChange = False
 	disableAmbientLight = True
 	integrateWithEVEClouds = True
-	inGameWindowLocation = 0,0
+	inGameWindowLocation = 1397,236
 	overrideNearClipPlane = False
 	nearClipPlane = 0.209999993
 	forceDisableDefaultDepthBuffer = False
@@ -11,18 +11,17 @@ Scatterer_config
 	oceanSkyReflections = True
 	oceanRefraction = True
 	oceanPixelLights = False
-	drawAtmoOnTopOfClouds = False
 	oceanCloudShadows = True
 	fullLensFlareReplacement = True
 	showMenuOnStart = True
 	scrollSectionHeight = 350
 	useGodrays = True
-	useEclipses = False
+	useEclipses = True
 	useRingShadows = True
 	terrainShadows = True
 	shadowNormalBias = 0.720000029
 	shadowBias = 0.5
-	shadowsDistance = 50000
+	shadowsDistance = 100000
 	guiModifierKey1String = LeftAlt
 	guiModifierKey2String = RightAlt
 	guiKey1String = F10
