--- a/config/planetsList.cfg
+++ b/config/planetsList.cfg
@@ -9,6 +9,7 @@ Scatterer_planetsList
 			loadDistance = 100000000
 			unloadDistance = 200000000
 			hasOcean = True
+			flatScaledSpaceModel = True
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			eclipseCasters
@@ -34,6 +35,7 @@ Scatterer_planetsList
 			loadDistance = 100000000
 			unloadDistance = 200000000
 			hasOcean = False
+			flatScaledSpaceModel = False
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			eclipseCasters
@@ -48,6 +50,7 @@ Scatterer_planetsList
 			loadDistance = 300000000
 			unloadDistance = 500000000
 			hasOcean = True
+			flatScaledSpaceModel = True
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			eclipseCasters
@@ -76,6 +79,7 @@ Scatterer_planetsList
 			loadDistance = 500000000
 			unloadDistance = 1E+09
 			hasOcean = False
+			flatScaledSpaceModel = True
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			eclipseCasters
@@ -94,6 +98,7 @@ Scatterer_planetsList
 			loadDistance = 300000000
 			unloadDistance = 500000000
 			hasOcean = True
+			flatScaledSpaceModel = True
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			eclipseCasters
