--- a/config/Planets/Eve/ocean.cfg
+++ b/config/Planets/Eve/ocean.cfg
@@ -4,27 +4,25 @@ Scatterer_ocean
 	{
 		name = Eve
 		m_foamAnsio = 9
-		m_foamMipMapBias = -2
-		m_whiteCapStr = -5.5
+		m_foamMipMapBias = 0
+		m_whiteCapStr = 0
 		shoreFoam = 0
-		m_farWhiteCapStr = -5.5
-		choppynessMultiplier = 0.699999988
-		AMP = 1
+		m_farWhiteCapStr = 0
+		AMP = 0.0500000007
 		m_ansio = 2
-		m_windSpeed = 5
+		m_windSpeed = 13
 		m_omega = 1
 		m_varianceSize = 4
 		m_oceanUpwellingColor = 0,0,0
 		m_UnderwaterColor = 0,9.99999975E-05,0
-		m_oceanLevel = 0
 		m_zmin = 20000
 		m_resolution = 4
 		MAX_VERTS = 65000
 		oceanScale = 1
 		oceanAlpha = 0.920000017
 		alphaRadius = 1000
-		transparencyDepth = 5
-		darknessDepth = 20
+		transparencyDepth = 7
+		darknessDepth = 200
 		refractionIndex = 1.75
 		fakeOceanAltitude = 160000
 	}
