--- a/config/Planets/Jool/atmo.cfg
+++ b/config/Planets/Jool/atmo.cfg
@@ -4,27 +4,18 @@ Scatterer_atmosphere
 	{
 		name = Jool
 		displayInterpolatedVariables = True
-		experimentalAtmoScale = 3
-		mapExtinctionMultiplier = 1
-		mapExtinctionTint = 0.699999988
-		mapSkyExtinctionRimFade = 1
-		mapGroundExtinctionFade = 0
-		_mapExtinctionScatterIntensity = 1
+		experimentalAtmoScale = 0.800000012
 		drawSkyOverClouds = True
 		drawOverCloudsAltitude = 100000
-		mapExposure = 0.0700000003
-		mapSkyRimExposure = 0.0700000003
-		cloudColorMultiplier = 2
-		cloudScatteringMultiplier = 0.0500000007
-		cloudSkyIrradianceMultiplier = 0.300000012
+		cloudColorMultiplier = 1.5
+		cloudScatteringMultiplier = 0.300000012
+		cloudSkyIrradianceMultiplier = 0.0299999993
 		volumetricsColorMultiplier = 1
-		mapAlphaGlobal = 1
 		Rg = 6000000
 		Rt = 6084904
 		RL = 6086321
 		atmosphereGlobalScale = 1
-		EVEIntegration_preserveCloudColors = True
-		AVERAGE_GROUND_REFLECTANCE = 0.100000001
+		EVEIntegration_preserveCloudColors = False
 		HR = 10
 		HM = 1.20000005
 		BETA_MSca = 0.00400000019,0.00400000019,0.00400000019
@@ -41,108 +32,33 @@ Scatterer_atmosphere
 		{
 			Item
 			{
-				altitude = 1000
+				altitude = 0
+				skyExposure = 0.25
 				skyAlpha = 1
-				skyExposure = 0.0700000003
-				skyRimExposure = 0.0700000003
-				postProcessAlpha = 0.779999971
-				postProcessDepth = 0.0599999987
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 0
+				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 0
-				edgeThreshold = 0
-				viewdirOffset = 0
-				_Post_Extinction_Tint = 0
-				postExtinctionMultiplier = 0
-				_GlobalOceanAlpha = 0
-				_extinctionScatterIntensity = 1
-			}
-			Item
-			{
-				altitude = 5000
-				skyAlpha = 1
-				skyExposure = 0.0700000003
-				skyRimExposure = 0.0700000003
+				scatteringExposure = 0.25
 				postProcessAlpha = 0.779999971
-				postProcessDepth = 0.100000001
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 0
-				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
+				postProcessDepth = 2.4000001
+				_Post_Extinction_Tint = 1
+				postExtinctionMultiplier = 1
 				openglThreshold = 0
-				edgeThreshold = 0
 				viewdirOffset = 0
-				_Post_Extinction_Tint = 0
-				postExtinctionMultiplier = 0
-				_GlobalOceanAlpha = 0
-				_extinctionScatterIntensity = 1
-			}
-			Item
-			{
-				altitude = 55000
-				skyAlpha = 1
-				skyExposure = 0.0700000003
-				skyRimExposure = 0.0700000003
-				postProcessAlpha = 0.779999971
-				postProcessDepth = 0.800000012
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 0
-				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 0
-				edgeThreshold = 0
-				viewdirOffset = 0
-				_Post_Extinction_Tint = 0
-				postExtinctionMultiplier = 0
-				_GlobalOceanAlpha = 0
-				_extinctionScatterIntensity = 1
 			}
 			Item
 			{
 				altitude = 160000
+				skyExposure = 0.150000006
 				skyAlpha = 1
-				skyExposure = 0.0700000003
-				skyRimExposure = 0.0700000003
-				postProcessAlpha = 0.779999971
-				postProcessDepth = 2.4000001
-				postProcessExposure = 0.230000004
 				skyExtinctionMultiplier = 1
-				skyExtinctionTint = 0.699999988
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
+				skyExtinctionTint = 1
+				scatteringExposure = 0.150000006
+				postProcessAlpha = 1
+				postProcessDepth = 0
+				_Post_Extinction_Tint = 1
+				postExtinctionMultiplier = 1
 				openglThreshold = 0
-				edgeThreshold = 0
 				viewdirOffset = 0
-				_Post_Extinction_Tint = 0
-				postExtinctionMultiplier = 0
-				_GlobalOceanAlpha = 0
-				_extinctionScatterIntensity = 1
-			}
-			Item
-			{
-				altitude = 500000
-				skyAlpha = 1
-				skyExposure = 0.0700000003
-				skyRimExposure = 0.0799999982
-				postProcessAlpha = 0.779999971
-				postProcessDepth = 2.4000001
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 1
-				skyExtinctionTint = 0.699999988
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 0
-				edgeThreshold = 0
-				viewdirOffset = 0
-				_Post_Extinction_Tint = 0
-				postExtinctionMultiplier = 0
-				_GlobalOceanAlpha = 0
-				_extinctionScatterIntensity = 1
 			}
 		}
 	}
