--- a/config/Planets/Kerbin/atmo.cfg
+++ b/config/Planets/Kerbin/atmo.cfg
@@ -7,24 +7,19 @@ Scatterer_atmosphere
 		experimentalAtmoScale = 2
 		mapExtinctionMultiplier = 0.899999976
 		mapExtinctionTint = 1
-		mapSkyExtinctionRimFade = 1
-		mapGroundExtinctionFade = 0
-		_mapExtinctionScatterIntensity = 1
 		drawSkyOverClouds = True
 		drawOverCloudsAltitude = 100000
-		mapExposure = 0.0799999982
-		mapSkyRimExposure = 0.0799999982
+		mapExposure = 0.200000003
 		cloudColorMultiplier = 3
 		cloudScatteringMultiplier = 0.200000003
 		cloudSkyIrradianceMultiplier = 0.0500000007
 		volumetricsColorMultiplier = 1
 		mapAlphaGlobal = 1
-		Rg = 800000
-		Rt = 811320.5
-		RL = 811509.5
+		Rg = 600000
+		Rt = 608490.375
+		RL = 608632.125
 		atmosphereGlobalScale = 1
 		EVEIntegration_preserveCloudColors = False
-		AVERAGE_GROUND_REFLECTANCE = 0.100000001
 		HR = 10
 		HM = 1.20000005
 		BETA_MSca = 0.00400000019,0.00400000019,0.00400000019
@@ -32,9 +27,9 @@ Scatterer_atmosphere
 		m_mieG = 0.779999971
 		rimBlend = 20
 		rimpower = 600
-		specR = 50
-		specG = 50
-		specB = 50
+		specR = 85
+		specG = 85
+		specB = 85
 		shininess = 75
 		assetPath = scatterer/config/Planets/Kerbin/Atmo
 		configPoints
@@ -43,127 +38,46 @@ Scatterer_atmosphere
 			{
 				altitude = 200
 				skyAlpha = 1
-				skyExposure = 0
-				skyRimExposure = 0.25
-				postProcessAlpha = 0.949999988
-				postProcessDepth = 0.0799999982
-				postProcessExposure = 0.200000003
+				skyExposure = 0.25
 				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 10
-				edgeThreshold = 0.100000001
-				viewdirOffset = 0.0120000001
-				_Post_Extinction_Tint = 0.600000024
+				postProcessAlpha = 1
+				scatteringExposure = 0.230000004
+				postProcessDepth = 0.0799999982
+				_Post_Extinction_Tint = 0.5
 				postExtinctionMultiplier = 1
-				_GlobalOceanAlpha = 1
-				_extinctionScatterIntensity = 1
+				openglThreshold = 10
+				viewdirOffset = 0.0120000001
 			}
 			Item
 			{
 				altitude = 1000
 				skyAlpha = 1
-				skyExposure = 0
-				skyRimExposure = 0.25
-				postProcessAlpha = 0.949999988
+				skyExposure = 0.25
+				skyExtinctionMultiplier = 1
+				skyExtinctionTint = 1
+				postProcessAlpha = 1
+				scatteringExposure = 0.230000004
 				postProcessDepth = 0.100000001
-				postProcessExposure = 0.200000003
-				skyExtinctionMultiplier = 1
-				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 10
-				edgeThreshold = 0.300000012
-				viewdirOffset = 0
-				_Post_Extinction_Tint = 0.600000024
+				_Post_Extinction_Tint = 0.5
 				postExtinctionMultiplier = 1
-				_GlobalOceanAlpha = 1
-				_extinctionScatterIntensity = 1
+				openglThreshold = 10
+				viewdirOffset = 0
 			}
 			Item
 			{
-				altitude = 5000
+				altitude = 250000
 				skyAlpha = 1
-				skyExposure = 0
-				skyRimExposure = 0.25
-				postProcessAlpha = 0.949999988
-				postProcessDepth = 0.129999995
-				postProcessExposure = 0.230000004
+				skyExposure = 0.200000003
 				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 10
-				edgeThreshold = 0.5
-				viewdirOffset = 0
+				postProcessAlpha = 1
+				scatteringExposure = 0.200000003
+				postProcessDepth = 0.100000001
 				_Post_Extinction_Tint = 0.600000024
 				postExtinctionMultiplier = 1
-				_GlobalOceanAlpha = 1
-				_extinctionScatterIntensity = 1
-			}
-			Item
-			{
-				altitude = 55000
-				skyAlpha = 1
-				skyExposure = 0
-				skyRimExposure = 0.25
-				postProcessAlpha = 0.949999988
-				postProcessDepth = 0.200000003
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 1
-				skyExtinctionTint = 1
-				skyextinctionRimFade = 1
-				skyextinctionGroundFade = 1
 				openglThreshold = 10
-				edgeThreshold = 0.5
 				viewdirOffset = 0
-				_Post_Extinction_Tint = 0.600000024
-				postExtinctionMultiplier = 1
-				_GlobalOceanAlpha = 1
-				_extinctionScatterIntensity = 1
-			}
-			Item
-			{
-				altitude = 100000
-				skyAlpha = 1
-				skyExposure = 0
-				skyRimExposure = 0.129999995
-				postProcessAlpha = 0.949999988
-				postProcessDepth = 0.5
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 1
-				skyExtinctionTint = 0
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 1
-				openglThreshold = 10
-				edgeThreshold = 0.5
-				viewdirOffset = 0
-				_Post_Extinction_Tint = 0.600000024
-				postExtinctionMultiplier = 1
-				_GlobalOceanAlpha = 0.5
-				_extinctionScatterIntensity = 1
-			}
-			Item
-			{
-				altitude = 160000
-				skyAlpha = 1
-				skyExposure = 0.0799999982
-				skyRimExposure = 0.0799999982
-				postProcessAlpha = 0
-				postProcessDepth = 0.5
-				postProcessExposure = 0.230000004
-				skyExtinctionMultiplier = 1
-				skyExtinctionTint = 1
-				skyextinctionRimFade = 0
-				skyextinctionGroundFade = 0
-				openglThreshold = 10
-				edgeThreshold = 1
-				viewdirOffset = 0
-				_Post_Extinction_Tint = 0
-				postExtinctionMultiplier = 0
-				_GlobalOceanAlpha = 0
-				_extinctionScatterIntensity = 1
 			}
 		}
 	}
