commit config for 0.049 Dev

--- a/config/Planets/Jool/atmo.cfg
+++ b/config/Planets/Jool/atmo.cfg
@@ -3,19 +3,16 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Jool
-		displayInterpolatedVariables = True
-		experimentalAtmoScale = 0.800000012
-		drawSkyOverClouds = True
-		drawOverCloudsAltitude = 100000
-		cloudColorMultiplier = 1.5
-		cloudScatteringMultiplier = 0.300000012
-		cloudSkyIrradianceMultiplier = 0.0299999993
+		experimentalAtmoScale = 1
+		cloudColorMultiplier = 1
+		cloudScatteringMultiplier = 0.5
+		cloudSkyIrradianceMultiplier = 0.0399999991
 		volumetricsColorMultiplier = 1
 		Rg = 6000000
 		Rt = 6084904
 		RL = 6086321
 		atmosphereGlobalScale = 1
-		EVEIntegration_preserveCloudColors = False
+		EVEIntegration_preserveCloudColors = True
 		HR = 10
 		HM = 1.20000005
 		BETA_MSca = 0.00400000019,0.00400000019,0.00400000019
@@ -35,13 +32,12 @@ Scatterer_atmosphere
 				altitude = 0
 				skyExposure = 0.25
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.25
+				extinctionThickness = 1
 				postProcessAlpha = 0.779999971
 				postProcessDepth = 2.4000001
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 0
 				viewdirOffset = 0
 			}
@@ -50,13 +46,12 @@ Scatterer_atmosphere
 				altitude = 160000
 				skyExposure = 0.150000006
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.150000006
+				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 0
 				viewdirOffset = 0
 			}
