--- a/config/Planets/Duna/atmo.cfg
+++ b/config/Planets/Duna/atmo.cfg
@@ -3,13 +3,10 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Duna
-		displayInterpolatedVariables = True
 		experimentalAtmoScale = 3
-		drawSkyOverClouds = False
-		drawOverCloudsAltitude = 100000
-		cloudColorMultiplier = 2
+		cloudColorMultiplier = 1
 		cloudScatteringMultiplier = 0.5
-		cloudSkyIrradianceMultiplier = 0.400000006
+		cloudSkyIrradianceMultiplier = 0.300000012
 		volumetricsColorMultiplier = 1
 		Rg = 320000
 		Rt = 324528.313
@@ -35,13 +32,12 @@ Scatterer_atmosphere
 				altitude = 1000
 				skyExposure = 0.300000012
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.300000012
+				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0.0149999997
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 100
 				viewdirOffset = 0
 			}
@@ -50,13 +46,12 @@ Scatterer_atmosphere
 				altitude = 5000
 				skyExposure = 0.300000012
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.300000012
+				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0.0599999987
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 800
 				viewdirOffset = 0
 			}
@@ -65,13 +60,12 @@ Scatterer_atmosphere
 				altitude = 160000
 				skyExposure = 0.300000012
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.300000012
+				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0.0599999987
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 0
 				viewdirOffset = 0
 			}
