--- a/config/Planets/Eve/atmo.cfg
+++ b/config/Planets/Eve/atmo.cfg
@@ -3,10 +3,7 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Eve
-		displayInterpolatedVariables = True
 		experimentalAtmoScale = 2.29999995
-		drawSkyOverClouds = False
-		drawOverCloudsAltitude = 100000
 		cloudColorMultiplier = 3
 		cloudScatteringMultiplier = 0.119999997
 		cloudSkyIrradianceMultiplier = 0.0299999993
@@ -35,13 +32,12 @@ Scatterer_atmosphere
 				altitude = 1000
 				skyExposure = 0.200000003
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.200000003
+				extinctionThickness = 1
 				postProcessAlpha = 1
-				postProcessDepth = 0
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				postProcessDepth = 0.200000003
+				extinctionTint = 0
 				openglThreshold = 10
 				viewdirOffset = 0.00999999978
 			}
@@ -50,13 +46,12 @@ Scatterer_atmosphere
 				altitude = 1000
 				skyExposure = 0.200000003
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.200000003
+				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 10
 				viewdirOffset = 0
 			}
@@ -65,13 +60,12 @@ Scatterer_atmosphere
 				altitude = 140000
 				skyExposure = 0.200000003
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.200000003
+				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0.5
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 10
 				viewdirOffset = 0
 			}
