--- a/config/Planets/Kerbin/atmo.cfg
+++ b/config/Planets/Kerbin/atmo.cfg
@@ -3,18 +3,11 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Kerbin
-		displayInterpolatedVariables = True
 		experimentalAtmoScale = 2
-		mapExtinctionMultiplier = 0.899999976
-		mapExtinctionTint = 1
-		drawSkyOverClouds = True
-		drawOverCloudsAltitude = 100000
-		mapExposure = 0.200000003
 		cloudColorMultiplier = 3
 		cloudScatteringMultiplier = 0.200000003
 		cloudSkyIrradianceMultiplier = 0.0500000007
 		volumetricsColorMultiplier = 1
-		mapAlphaGlobal = 1
 		Rg = 600000
 		Rt = 608490.375
 		RL = 608632.125
@@ -37,45 +30,42 @@ Scatterer_atmosphere
 			Item
 			{
 				altitude = 200
-				skyAlpha = 1
 				skyExposure = 0.25
-				skyExtinctionMultiplier = 1
+				skyAlpha = 1
 				skyExtinctionTint = 1
-				postProcessAlpha = 1
 				scatteringExposure = 0.230000004
+				extinctionThickness = 1
+				postProcessAlpha = 1
 				postProcessDepth = 0.0799999982
-				_Post_Extinction_Tint = 0.5
-				postExtinctionMultiplier = 1
+				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0.0120000001
 			}
 			Item
 			{
 				altitude = 1000
-				skyAlpha = 1
 				skyExposure = 0.25
-				skyExtinctionMultiplier = 1
+				skyAlpha = 1
 				skyExtinctionTint = 1
-				postProcessAlpha = 1
 				scatteringExposure = 0.230000004
+				extinctionThickness = 1
+				postProcessAlpha = 1
 				postProcessDepth = 0.100000001
-				_Post_Extinction_Tint = 0.5
-				postExtinctionMultiplier = 1
+				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0
 			}
 			Item
 			{
 				altitude = 250000
-				skyAlpha = 1
 				skyExposure = 0.200000003
-				skyExtinctionMultiplier = 1
+				skyAlpha = 1
 				skyExtinctionTint = 1
-				postProcessAlpha = 1
 				scatteringExposure = 0.200000003
+				extinctionThickness = 1
+				postProcessAlpha = 1
 				postProcessDepth = 0.100000001
-				_Post_Extinction_Tint = 0.600000024
-				postExtinctionMultiplier = 1
+				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0
 			}
