--- a/config/Planets/Laythe/atmo.cfg
+++ b/config/Planets/Laythe/atmo.cfg
@@ -3,10 +3,7 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Laythe
-		displayInterpolatedVariables = True
 		experimentalAtmoScale = 1.5
-		drawSkyOverClouds = True
-		drawOverCloudsAltitude = 100000
 		cloudColorMultiplier = 4
 		cloudScatteringMultiplier = 0.200000003
 		cloudSkyIrradianceMultiplier = 0.119999997
@@ -35,13 +32,12 @@ Scatterer_atmosphere
 				altitude = 200
 				skyExposure = 0.219999999
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.219999999
+				extinctionThickness = 1
 				postProcessAlpha = 0.949999988
 				postProcessDepth = 0.0599999987
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 10
 				viewdirOffset = 0.0240000002
 			}
@@ -50,13 +46,12 @@ Scatterer_atmosphere
 				altitude = 1000
 				skyExposure = 0.219999999
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.219999999
+				extinctionThickness = 1
 				postProcessAlpha = 0.949999988
 				postProcessDepth = 0.0799999982
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 10
 				viewdirOffset = 0
 			}
@@ -65,13 +60,12 @@ Scatterer_atmosphere
 				altitude = 5000
 				skyExposure = 0.219999999
 				skyAlpha = 1
-				skyExtinctionMultiplier = 1
 				skyExtinctionTint = 1
 				scatteringExposure = 0.219999999
+				extinctionThickness = 1
 				postProcessAlpha = 0.949999988
 				postProcessDepth = 0.0799999982
-				_Post_Extinction_Tint = 1
-				postExtinctionMultiplier = 1
+				extinctionTint = 0
 				openglThreshold = 10
 				viewdirOffset = 0
 			}
