--- a/config/config.cfg
+++ b/config/config.cfg
@@ -3,16 +3,18 @@ Scatterer_config
 	autosavePlanetSettingsOnSceneChange = False
 	disableAmbientLight = True
 	integrateWithEVEClouds = True
-	inGameWindowLocation = 1397,236
+	inGameWindowLocation = 0,0
 	overrideNearClipPlane = False
 	nearClipPlane = 0.209999993
 	forceDisableDefaultDepthBuffer = False
 	useOceanShaders = True
+	shadowsOnOcean = True
 	oceanSkyReflections = True
 	oceanRefraction = True
 	oceanPixelLights = False
-	oceanCloudShadows = True
 	fullLensFlareReplacement = True
+	sunlightExtinction = True
+	underwaterLightDimming = True
 	showMenuOnStart = True
 	scrollSectionHeight = 350
 	useGodrays = True
