--- a/config/Planets/Eve/ocean.cfg
+++ b/config/Planets/Eve/ocean.cfg
@@ -13,17 +13,15 @@ Scatterer_ocean
 		m_windSpeed = 13
 		m_omega = 1
 		m_varianceSize = 4
-		m_oceanUpwellingColor = 0,0,0
+		m_oceanUpwellingColor = 0,0.00100000005,0
 		m_UnderwaterColor = 0,9.99999975E-05,0
-		m_zmin = 20000
 		m_resolution = 4
 		MAX_VERTS = 65000
 		oceanScale = 1
 		oceanAlpha = 0.920000017
 		alphaRadius = 1000
-		transparencyDepth = 7
+		transparencyDepth = 10
 		darknessDepth = 200
 		refractionIndex = 1.75
-		fakeOceanAltitude = 160000
 	}
 }
