commit config for 0.0542dev

--- a/config/Sunflares/Sun.cfg
+++ b/config/Sunflares/Sun.cfg
@@ -5,9 +5,10 @@ Scatterer_sunflare
 		//path to sunflare textures
 		assetPath = scatterer/config/Sunflares/Sun
 
-		
+		flareColor = 1.0,1.0,1.0
+
 		//Flare and spikes: Centered on the sun
-		//
+		//intensity, aspect ratio, 1/scale
 		//
 		//sunFlare.png
 		flareSettings = 0.45,1,0.85
