--- a/config/planetsList.cfg
+++ b/config/planetsList.cfg
@@ -12,6 +12,7 @@ Scatterer_planetsList
 			flatScaledSpaceModel = True
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
+			sunColor = 1.0,1.0,1.0
 			eclipseCasters
 			{
 				Item = Mun
