commit caustics configs

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -8,6 +8,8 @@ Scatterer_config
 	useOceanShaders = True
 	shadowsOnOcean = True
 	oceanSkyReflections = True
+	oceanRefraction = True
+	oceanCaustics = True
 	oceanPixelLights = False
 	fullLensFlareReplacement = True
 	sunlightExtinction = True
