--- a/config/planetsList.cfg
+++ b/config/planetsList.cfg
@@ -116,6 +116,7 @@ Scatterer_planetsList
 			color = 0.600000024,1,0.400000006
 			intensity = 0.25
 			isSun = False
+			mainSunCelestialBody = Sun
 			scaledRange = 45000
 			fadeRadius = 1
 		}
