--- a/config/Planets/Eve/ocean.cfg
+++ b/config/Planets/Eve/ocean.cfg
@@ -14,14 +14,23 @@ Scatterer_ocean
 		m_omega = 1
 		m_varianceSize = 4
 		m_oceanUpwellingColor = 0,0.00100000005,0
-		m_UnderwaterColor = 0,9.99999975E-05,0
+		m_UnderwaterColor = 0.00100000005,0.00999999978,0.00100000005
 		m_resolution = 4
 		MAX_VERTS = 65000
 		oceanScale = 1
 		oceanAlpha = 0.920000017
 		alphaRadius = 1000
-		transparencyDepth = 10
-		darknessDepth = 200
+		transparencyDepth = 25
+		darknessDepth = 100
 		refractionIndex = 1.75
+		causticsTexturePath = 
+		causticsLayer1Scale = 0,0
+		causticsLayer1Speed = 0,0
+		causticsLayer2Scale = 0,0
+		causticsLayer2Speed = 0,0
+		causticsMultiply = 0
+		causticsUnderwaterLightBoost = 0
+		causticsMinBrightness = 0
+		causticsBlurDepth = 0
 	}
 }
