--- a/config/Planets/Laythe/ocean.cfg
+++ b/config/Planets/Laythe/ocean.cfg
@@ -8,7 +8,6 @@ Scatterer_ocean
 		m_whiteCapStr = 0.200000003
 		shoreFoam = 1.20000005
 		m_farWhiteCapStr = -0.180000007
-		choppynessMultiplier = 1
 		AMP = 1
 		m_ansio = 2
 		m_windSpeed = 5
@@ -16,8 +15,6 @@ Scatterer_ocean
 		m_varianceSize = 4
 		m_oceanUpwellingColor = 0.00100000005,0.00389999989,0.0187800005
 		m_UnderwaterColor = 0,0.5,0.600000024
-		m_oceanLevel = 0
-		m_zmin = 20000
 		m_resolution = 4
 		MAX_VERTS = 65000
 		oceanScale = 1
@@ -26,6 +23,14 @@ Scatterer_ocean
 		transparencyDepth = 60
 		darknessDepth = 1000
 		refractionIndex = 1.33000004
-		fakeOceanAltitude = 160000
+		causticsTexturePath = scatterer/config/Planets/Caustics2.png
+		causticsLayer1Scale = 0.200000003,0.200000003
+		causticsLayer1Speed = 0.0612000003,-0.151199996
+		causticsLayer2Scale = 0.277099997,0.267100006
+		causticsLayer2Speed = -0.0748699978,0.174869999
+		causticsMultiply = 1
+		causticsUnderwaterLightBoost = 2
+		causticsMinBrightness = 0.5
+		causticsBlurDepth = 200
 	}
 }
