--- a/config/Planets/Duna/atmo.cfg
+++ b/config/Planets/Duna/atmo.cfg
@@ -3,6 +3,7 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Duna
+		flattenScaledSpaceMesh = 0.200000003
 		experimentalAtmoScale = 3
 		cloudColorMultiplier = 1
 		cloudScatteringMultiplier = 0.5
