--- a/config/Planets/Kerbin/atmo.cfg
+++ b/config/Planets/Kerbin/atmo.cfg
@@ -3,6 +3,7 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Kerbin
+		flattenScaledSpaceMesh = 0.600000024
 		experimentalAtmoScale = 2
 		cloudColorMultiplier = 3
 		cloudScatteringMultiplier = 0.200000003
@@ -20,9 +21,9 @@ Scatterer_atmosphere
 		m_mieG = 0.779999971
 		rimBlend = 20
 		rimpower = 600
-		specR = 85
-		specG = 85
-		specB = 85
+		specR = 80
+		specG = 72
+		specB = 65
 		shininess = 75
 		assetPath = scatterer/config/Planets/Kerbin/Atmo
 		configPoints
