--- a/config/config.cfg
+++ b/config/config.cfg
@@ -17,9 +17,17 @@ Scatterer_config
 	showMenuOnStart = True
 	useEclipses = True
 	useRingShadows = True
+	d3d11ShadowFix = True
 	terrainShadows = True
-	shadowNormalBias = 0.720000029
-	shadowBias = 0.5
-	shadowsDistance = 100000
+	unifiedCamShadowsDistance = 50000
+	unifiedCamShadowNormalBiasOverride = 0
+	unifiedCamShadowBiasOverride = 0
+	unifiedCamShadowResolutionOverride = 8192
+	unifiedCamShadowCascadeSplitsOverride = 0.00150000001,0.0149999997,0.150000006
+	dualCamShadowsDistance = 50000
+	dualCamShadowNormalBiasOverride = 0.720000029
+	dualCamShadowBiasOverride = 0.5
+	dualCamShadowResolutionOverride = 0
+	dualCamShadowCascadeSplitsOverride = 0.00499999989,0.0250000004,0.125
 	m_fourierGridSize = 128
 }
