commit config for 0.0700

--- a/config/Planets/Eve/atmo.cfg
+++ b/config/Planets/Eve/atmo.cfg
@@ -3,16 +3,17 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Eve
+		flattenScaledSpaceMesh = 0
 		experimentalAtmoScale = 2.29999995
-		cloudColorMultiplier = 3
-		cloudScatteringMultiplier = 0.119999997
-		cloudSkyIrradianceMultiplier = 0.0299999993
+		cloudColorMultiplier = 1
+		cloudScatteringMultiplier = 0.219999999
+		cloudSkyIrradianceMultiplier = 2
 		volumetricsColorMultiplier = 3
 		Rg = 700000
 		Rt = 710103.688
 		RL = 711380.5
 		atmosphereGlobalScale = 1
-		EVEIntegration_preserveCloudColors = False
+		EVEIntegration_preserveCloudColors = True
 		HR = 10
 		HM = 1.20000005
 		BETA_MSca = 0.00400000019,0.00400000019,0.00400000019
@@ -25,6 +26,7 @@ Scatterer_atmosphere
 		specB = 50
 		shininess = 30
 		assetPath = scatterer/config/Planets/Eve/Atmo
+		godrayStrength = 0.800000012
 		configPoints
 		{
 			Item
