--- a/config/Planets/Jool/atmo.cfg
+++ b/config/Planets/Jool/atmo.cfg
@@ -3,10 +3,11 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Jool
+		flattenScaledSpaceMesh = 0
 		experimentalAtmoScale = 1
 		cloudColorMultiplier = 1
 		cloudScatteringMultiplier = 0.5
-		cloudSkyIrradianceMultiplier = 0.0399999991
+		cloudSkyIrradianceMultiplier = 0.200000003
 		volumetricsColorMultiplier = 1
 		Rg = 6000000
 		Rt = 6084904
@@ -25,6 +26,7 @@ Scatterer_atmosphere
 		specB = 1
 		shininess = 10
 		assetPath = scatterer/config/Planets/Jool/Atmo
+		godrayStrength = 0.800000012
 		configPoints
 		{
 			Item
