--- a/config/Planets/Laythe/atmo.cfg
+++ b/config/Planets/Laythe/atmo.cfg
@@ -3,10 +3,11 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Laythe
+		flattenScaledSpaceMesh = 0
 		experimentalAtmoScale = 1.5
-		cloudColorMultiplier = 4
-		cloudScatteringMultiplier = 0.200000003
-		cloudSkyIrradianceMultiplier = 0.119999997
+		cloudColorMultiplier = 3
+		cloudScatteringMultiplier = 1
+		cloudSkyIrradianceMultiplier = 1
 		volumetricsColorMultiplier = 1
 		Rg = 500000
 		Rt = 507075.313
@@ -25,6 +26,7 @@ Scatterer_atmosphere
 		specB = 40
 		shininess = 50
 		assetPath = scatterer/config/Planets/Laythe/Atmo
+		godrayStrength = 0.800000012
 		configPoints
 		{
 			Item
