--- a/config/Planets/Duna/atmo.cfg
+++ b/config/Planets/Duna/atmo.cfg
@@ -5,9 +5,9 @@ Scatterer_atmosphere
 		name = Duna
 		flattenScaledSpaceMesh = 0.200000003
 		experimentalAtmoScale = 3
-		cloudColorMultiplier = 1
+		cloudColorMultiplier = 10
 		cloudScatteringMultiplier = 0.5
-		cloudSkyIrradianceMultiplier = 0.300000012
+		cloudSkyIrradianceMultiplier = 10
 		volumetricsColorMultiplier = 1
 		Rg = 320000
 		Rt = 324528.313
@@ -26,6 +26,7 @@ Scatterer_atmosphere
 		specB = 2
 		shininess = 50
 		assetPath = scatterer/config/Planets/Duna/Atmo
+		godrayStrength = 0.800000012
 		configPoints
 		{
 			Item
