--- a/config/Planets/Eve/ocean.cfg
+++ b/config/Planets/Eve/ocean.cfg
@@ -3,8 +3,6 @@ Scatterer_ocean
 	Ocean
 	{
 		name = Eve
-		m_foamAnsio = 9
-		m_foamMipMapBias = 0
 		m_whiteCapStr = 0
 		shoreFoam = 0
 		m_farWhiteCapStr = 0
@@ -12,13 +10,11 @@ Scatterer_ocean
 		m_ansio = 2
 		m_windSpeed = 13
 		m_omega = 1
-		m_varianceSize = 4
+		maxWaveInteractionShipAltitude = 500
 		m_oceanUpwellingColor = 0,0.00100000005,0
 		m_UnderwaterColor = 0.00100000005,0.00999999978,0.00100000005
 		m_resolution = 4
-		MAX_VERTS = 65000
-		oceanScale = 1
-		oceanAlpha = 0.920000017
+		offScreenVertexStretch = 1.25
 		alphaRadius = 1000
 		transparencyDepth = 25
 		darknessDepth = 100
@@ -32,5 +28,6 @@ Scatterer_ocean
 		causticsUnderwaterLightBoost = 0
 		causticsMinBrightness = 0
 		causticsBlurDepth = 0
+		lightRaysStrength = 1
 	}
 }
