--- a/config/Planets/Kerbin/atmo.cfg
+++ b/config/Planets/Kerbin/atmo.cfg
@@ -3,11 +3,11 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Kerbin
-		flattenScaledSpaceMesh = 0.600000024
+		flattenScaledSpaceMesh = 0.6
 		experimentalAtmoScale = 2
 		cloudColorMultiplier = 3
-		cloudScatteringMultiplier = 0.200000003
-		cloudSkyIrradianceMultiplier = 0.0500000007
+		cloudScatteringMultiplier = 0.2
+		cloudSkyIrradianceMultiplier = 0.05
 		volumetricsColorMultiplier = 1
 		Rg = 600000
 		Rt = 608490.375
@@ -15,10 +15,10 @@ Scatterer_atmosphere
 		atmosphereGlobalScale = 1
 		EVEIntegration_preserveCloudColors = False
 		HR = 10
-		HM = 1.20000005
-		BETA_MSca = 0.00400000019,0.00400000019,0.00400000019
-		m_betaR = 0.00579999993,0.0135000004,0.0331000015
-		m_mieG = 0.779999971
+		HM = 1.2
+		BETA_MSca = 0.004,0.004,0.004
+		m_betaR = 0.0058,0.0135,0.0331
+		m_mieG = 0.78
 		rimBlend = 20
 		rimpower = 600
 		specR = 80
@@ -26,6 +26,7 @@ Scatterer_atmosphere
 		specB = 65
 		shininess = 75
 		assetPath = scatterer/config/Planets/Kerbin/Atmo
+		godrayStrength = 0.7
 		configPoints
 		{
 			Item
@@ -34,13 +35,13 @@ Scatterer_atmosphere
 				skyExposure = 0.25
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.230000004
+				scatteringExposure = 0.23
 				extinctionThickness = 1
 				postProcessAlpha = 1
-				postProcessDepth = 0.0799999982
+				postProcessDepth = 0.08
 				extinctionTint = 0.5
 				openglThreshold = 10
-				viewdirOffset = 0.0120000001
+				viewdirOffset = 0.012
 			}
 			Item
 			{
@@ -48,10 +49,10 @@ Scatterer_atmosphere
 				skyExposure = 0.25
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.230000004
+				scatteringExposure = 0.23
 				extinctionThickness = 1
 				postProcessAlpha = 1
-				postProcessDepth = 0.100000001
+				postProcessDepth = 0.1
 				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0
@@ -59,13 +60,13 @@ Scatterer_atmosphere
 			Item
 			{
 				altitude = 250000
-				skyExposure = 0.200000003
+				skyExposure = 0.2
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.200000003
+				scatteringExposure = 0.2
 				extinctionThickness = 1
 				postProcessAlpha = 1
-				postProcessDepth = 0.100000001
+				postProcessDepth = 0.1
 				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0
