--- a/config/Planets/Kerbin/ocean.cfg
+++ b/config/Planets/Kerbin/ocean.cfg
@@ -3,22 +3,18 @@ Scatterer_ocean
 	Ocean
 	{
 		name = Kerbin
-		m_foamAnsio = 0
-		m_foamMipMapBias = -2
 		m_whiteCapStr = 0.469999999
 		shoreFoam = 1
 		m_farWhiteCapStr = 0.469999999
-		AMP = 1
-		m_ansio = 2
-		m_windSpeed = 5
+		AMP = 1.20000005
+		m_windSpeed = 7
 		m_omega = 0.839999974
+		maxWaveInteractionShipAltitude = 500
 		m_oceanUpwellingColor = 0.00999999978,0.075000003,0.0799999982
 		m_UnderwaterColor = 0.100000001,0.75,0.800000012
 		m_resolution = 4
-		MAX_VERTS = 65000
-		oceanScale = 1
-		oceanAlpha = 0
-		alphaRadius = 1400
+		offScreenVertexStretch = 1.25
+		alphaRadius = 1000
 		transparencyDepth = 100
 		darknessDepth = 800
 		refractionIndex = 1.33000004
@@ -31,5 +27,6 @@ Scatterer_ocean
 		causticsUnderwaterLightBoost = 2
 		causticsMinBrightness = 0.5
 		causticsBlurDepth = 200
+		lightRaysStrength = 1
 	}
 }
