--- a/config/config.cfg
+++ b/config/config.cfg
@@ -8,8 +8,9 @@ Scatterer_config
 	useOceanShaders = True
 	shadowsOnOcean = True
 	oceanSkyReflections = True
-	oceanRefraction = True
 	oceanCaustics = True
+	oceanLightRays = True
+	oceanCraftWaveInteractions = True
 	oceanPixelLights = False
 	fullLensFlareReplacement = True
 	sunlightExtinction = True
@@ -18,6 +19,7 @@ Scatterer_config
 	useEclipses = True
 	useRingShadows = True
 	d3d11ShadowFix = True
+	useGodrays = True
 	terrainShadows = True
 	unifiedCamShadowsDistance = 50000
 	unifiedCamShadowNormalBiasOverride = 0
@@ -30,5 +32,5 @@ Scatterer_config
 	dualCamShadowResolutionOverride = 0
 	dualCamShadowCascadeSplitsOverride = 0.00499999989,0.0250000004,0.125
 	useDithering = True
-	m_fourierGridSize = 128
+	m_fourierGridSize = 256
 }
